# inoa

./: LICENSE  README.md  script.R  setup.cfg
inoa/: contig.py  errors.py  run.py  txtcolors.py  utils.py
