[metadata]
name = inoa
version = 0.0.1
author = FDB
author_email = frederik.de.boever@gmail.com
description = INOA - INtegrated multi-Omics data Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FDBoever/inoa
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True